# kyvyrn

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: chromium.rs  configs.rs  global_config.rs  icons.rs  mod.rs  webview.rs
src-tauri/src/net/: http.rs
src-tauri/src/utils/: browser.rs  mod.rs  paths.rs  url.rs
src/components/: UrlInput.tsx
src/pages/: Landing.tsx  Wrapper.tsx
src/types/: engine.ts  globalConfig.ts
src/utils/: icon.tsx
