[package]
name = "kyvyrn"
version = "0.1.0"
description = "Web App Manager"
authors = ["you"]
license = "MIT"
repository = "https://github.com/serpmillers/kyvyrn"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["wry"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-oauth = "2.0.0"
reqwest = { version = "0.12.26", features = ["blocking"] }
image = "0.25.6"
resvg = "0.45.1"
scraper = "0.25.0"
url = "2.5.7"
dirs = "6.0.0"
tauri-plugin-fs = "2.4.4"
